syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "./;payment";

package payment;

message Payment {
  uint32 Amount = 1;
  string OrderID = 2;
  string Sign = 3;
}

message UserID {
  uint64 ID = 1;
}

message PaymentLink {
  string Link = 1;
}

message Nothing {}

service PaymentService {
  rpc Accept(Payment) returns (Nothing) {}
  rpc GetPaymentLink(UserID) returns (PaymentLink) {}
}